Fixed right button position and added swipe ability on mobile

--- a/src/Components/Carrousel/carrousel.css
+++ b/src/Components/Carrousel/carrousel.css
@@ -72,12 +72,12 @@
     visibility: visible;
 }
 
-.carrousel-previous{
+.carrousel-next{
     transform: rotate(180deg);
-    left: calc(100% - 15px);
+    left: calc(100% - 45px);
 }
 
-.carrousel-next{
+.carrousel-previous{
     left: 0px;
 }
 
